[gd_scene load_steps=9 format=3 uid="uid://cwcpbk2xm6kw0"]

[ext_resource type="Script" path="res://canvas_controler.gd" id="1_27g6u"]
[ext_resource type="Theme" uid="uid://bjtocp4mjh56t" path="res://default_theme.tres" id="1_p6hei"]
[ext_resource type="Texture2D" uid="uid://c4ub080nyeg88" path="res://assets/pen.png" id="3_u8cv1"]
[ext_resource type="Texture2D" uid="uid://dvhkio13c2um5" path="res://assets/highlighter.png" id="4_t16x2"]
[ext_resource type="Texture2D" uid="uid://cyemyiov0ypju" path="res://assets/rect.png" id="5_r8mf2"]
[ext_resource type="Texture2D" uid="uid://bsdaxnjfvx80j" path="res://assets/circle.png" id="6_s63op"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vrwhw"]
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.501961, 0.501961, 0.501961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5lb2i"]
bg_color = Color(0, 0, 0, 0.501961)

[node name="CanvasControler" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p6hei")
script = ExtResource("1_27g6u")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MenuBar" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_constants/separation = 5

[node name="File" type="MenuButton" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar"]
unique_name_in_owner = true
layout_mode = 2
text = "File
"
item_count = 5
popup/item_0/text = "New(Ctrl+N)"
popup/item_0/id = 0
popup/item_1/text = "Save(Ctrl+S)"
popup/item_1/id = 1
popup/item_2/text = "Save As(Ctrl+Shift+S)"
popup/item_2/id = 2
popup/item_3/text = ""
popup/item_3/id = 3
popup/item_3/separator = true
popup/item_4/text = "Switch Screen(Ctrl+M)"
popup/item_4/id = 4

[node name="Edit" type="MenuButton" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit"
item_count = 2
popup/item_0/text = "Undo(Ctrl+Z)"
popup/item_0/id = 0
popup/item_0/disabled = true
popup/item_1/text = "Redo(Ctrl+Y/Ctrl+Shift+Z)"
popup/item_1/id = 1
popup/item_1/disabled = true

[node name="MarginContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vrwhw")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar/MarginContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = " Background: "

[node name="BackColor" type="ColorPickerButton" parent="VBoxContainer/PanelContainer/MarginContainer2/MenuBar/MarginContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
flat = true

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Pens" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Pen" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5lb2i")

[node name="Pen" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens/Pen"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 1
texture_normal = ExtResource("3_u8cv1")
ignore_texture_size = true
stretch_mode = 5

[node name="Highlighter" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5lb2i")

[node name="Highlighter" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens/Highlighter"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 1
texture_normal = ExtResource("4_t16x2")
ignore_texture_size = true
stretch_mode = 5

[node name="Rect" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5lb2i")

[node name="Rect" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens/Rect"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 1
texture_normal = ExtResource("5_r8mf2")
ignore_texture_size = true
stretch_mode = 5

[node name="Circle" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens"]
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5lb2i")

[node name="Circle" type="TextureButton" parent="VBoxContainer/MarginContainer/HBoxContainer/Pens/Circle"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 1
texture_normal = ExtResource("6_s63op")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Filled" type="CheckBox" parent="VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "filled"

[node name="PenSize" type="SpinBox" parent="VBoxContainer/MarginContainer/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 500.0
value = 100.0
rounded = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
text = "Pen Color"
color = Color(1, 0, 0, 1)
edit_alpha = false

[node name="CanvasMode" type="HBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="Normal" type="CheckBox" parent="VBoxContainer/MarginContainer/HBoxContainer/CanvasMode"]
layout_mode = 2
focus_mode = 0
button_pressed = true
text = "normal"

[node name="UnReach" type="CheckBox" parent="VBoxContainer/MarginContainer/HBoxContainer/CanvasMode"]
visible = false
layout_mode = 2
focus_mode = 0
text = "unreachable"

[node name="Hide" type="CheckBox" parent="VBoxContainer/MarginContainer/HBoxContainer/CanvasMode"]
layout_mode = 2
focus_mode = 0
text = "hide"
